--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         </div>
 
         <!-- 
-            TODO: Corrigir os problemas de divisão com 0! 0/0, n/0 e 0/n
-            TODO: Refazer o CSS pensando na responsividade para as telas de celular.
+            TODO: Corrigir os problemas de divisão com 0! 0/0, n/0 e 0/
          -->
         
     </main>
 
     <footer id="footer-container">
+        <span></span>
         <span>
             Made with ❤️ by <a href="http://github.com/Hoyasumii" target="_blank">Alan Reis</a>
         </span>
