--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="./wwwroot/styles/essential.css">
     <link rel="stylesheet" href="./wwwroot/styles/themes.css">
-    <script src="./wwwroot/scripts/script.js" defer></script>
+    <script src="./wwwroot/scripts/script.js" type="module" defer></script>
 </head>
 <body id="body" class="dark-theme">
 
